--- a/HW/HW4/HarrisRansom_InfonetSecurityHW4.ipynb
+++ b/HW/HW4/HarrisRansom_InfonetSecurityHW4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 99,
    "id": "908e48f6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 100,
    "id": "cf469a0d-0cf0-4990-bc5b-2b23373b81f4",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 101,
    "id": "43fcfe35",
    "metadata": {},
    "outputs": [
@@ -113,12 +113,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice's Secret Integer (x): 22154383128226360424108748540258917568795639377044322853762896826702272548794\n",
-      "Bob's Secret Integer (y): 114076194838391609757540358024891046828944644658141348300488935902832966500786\n",
-      "Alice's Message (A): 100711379082281706897595169077822340133322185988097171620941867984902423472785\n",
-      "Bob's Message (B): 93024941944536752664109929246921171931182924937435024415241039521585661533448\n",
-      "Alice's Computed Key (Ka): 32071547943736115665050403073669512495348730700298905644579461665461232772058\n",
-      "Bob's Computed Key (Kb): 32071547943736115665050403073669512495348730700298905644579461665461232772058\n",
+      "Alice's Secret Integer (x): 103942617027519119141562805648210453638241093426526920922923428301865364229655\n",
+      "Bob's Secret Integer (y): 62845697931736587815053224316100086009516294252906270292721527104062312968881\n",
+      "Alice's Message (A): 22054030797405554611425977340076365042734783189792827804250538703071140040447\n",
+      "Bob's Message (B): 88025642666918293680232599823681244762930842521432850742876386823387991661766\n",
+      "Alice's Computed Key (Ka): 53771038504644104173390392485816407181997893170245938945953998787390030610842\n",
+      "Bob's Computed Key (Kb): 53771038504644104173390392485816407181997893170245938945953998787390030610842\n",
       "Computed keys match!\n"
      ]
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "id": "e55b843c",
    "metadata": {},
    "outputs": [
@@ -178,9 +178,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bob's private key k: 2\n",
-      "Ciphertext c: 1752\n",
-      "Recovered key k2: 2\n",
+      "Bob's private key k: 1\n",
+      "Ciphertext c: 1\n",
+      "Recovered key k2: 1\n",
       "Keys match!\n"
      ]
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "id": "b1af31db",
    "metadata": {},
    "outputs": [
@@ -258,10 +258,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice PubKey: (102188617217178804476387977160129334431745945009730065519337094992129677228373, 2, 80899835145357920942494557661460664162703362290248426297364679347580434985080)\n",
-      "Alice PrivKey: 34712516988083379691081339589397865502385108947735648349202094734018948174231\n",
-      "Alice PubKey: (102188617217178804476387977160129334431745945009730065519337094992129677228373, 2, 74865874635444876744646439324670460003019675083857352028775754047844475467536)\n",
-      "Alice PrivKey: 66113823857655645046645684943973332772381990883652895801214949166338344308767\n",
+      "Alice PubKey: (102188617217178804476387977160129334431745945009730065519337094992129677228373, 2, 62193917572866018150823960888256581150641112840529189581066627907449513806609)\n",
+      "Alice PrivKey: 60896209239658448741689797301563836292291617474484063003313163110157978247885\n",
+      "Alice PubKey: (102188617217178804476387977160129334431745945009730065519337094992129677228373, 2, 16995637571503585884390100069224209536523388006260993213026142198252443690433)\n",
+      "Alice PrivKey: 63908196770624053041869201617727530322661982459669076606812428283386501964306\n",
       "Unaltered Message Authentication Successful: True\n",
       "Altered Message Authentication Successful: False\n"
      ]
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 104,
    "id": "157373be-9283-4cb4-918a-a47da11794bf",
    "metadata": {},
    "outputs": [
@@ -371,9 +371,25 @@
      "text": [
       "Performing non-replay experiment on vulnerable cryptosystem...\n",
       "Successful authentication!\n",
+      "\n",
       "Performing replay experiment on vulnerable cryptosystem...\n",
       "Successful authentication!\n",
       "Replay attack successful!\n",
+      "\n",
+      "Performing non-replay experiment on timestamped cryptosystem...\n",
+      "Decrypted timestamp: 17321614462395\n",
+      "Bob's current_timestamp: 17321614462416\n",
+      "Calculated time difference: 21\n",
+      "Successful authentication!\n",
+      "\n",
+      "Performing replay experiment on timestamped cryptosystem...\n",
+      "Decrypted timestamp: 17321614462418\n",
+      "Bob's current_timestamp: 17321614462438\n",
+      "Calculated time difference: 20\n",
+      "Successful authentication!\n",
+      "Replay time difference: 541\n",
+      "Replay attack unsuccessful!\n",
+      "\n",
       "Finished experiments\n"
      ]
     }
@@ -424,45 +440,63 @@
     "            print(\"Replay attack unsuccessful!\")\n",
     "\n",
     "# Demonstrate improved timestamped cryptosystem\n",
-    "def TimestampedCryptosystem(keB, kdB, replayAttack=False):\n",
+    "def TimestampedCryptosystem(keB, kdB, replayAttack=False, time_window = 50):\n",
     "    # Note: Alice and Bob perform secure key exchange beforehand to agree on token\n",
     "\n",
-    "    # Alice sends token with timestamp to Bob\n",
-    "    # TODO: Figure out how to add timestamp to cipher\n",
+    "    # Alice sends (token || timestamp) to Bob\n",
     "    token = 1234\n",
-    "    c = RSA_encrypt(token, keB)\n",
+    "    encrypted_token = RSA_encrypt(token, keB)\n",
+    "    timestamp = int(time.time() * 10000)\n",
+    "    encrypted_timestamp = RSA_encrypt(timestamp, keB)\n",
+    "    c = (encrypted_token, encrypted_timestamp)\n",
+    "    \n",
+    "    # Eve intercepts ciphered token and timestamp\n",
+    "    c_eve = c\n",
     "\n",
-    "    # Eve intercepts ciphered token\n",
-    "    token_eve = c\n",
-    "\n",
-    "    # Bob receives Alice's original token and decrypts it with his private key\n",
-    "    # TODO: Figure out how to decrypt ciphertext with timestamp\n",
-    "    token_bob = RSA_decrypt(c, kdB)\n",
-    "    if (token_bob == 1234):\n",
+    "    # Bob receives Alice's original token and timestamp and decrypts it with his private key\n",
+    "    encrypted_token, encrypted_timestamp = c\n",
+    "    token_bob = RSA_decrypt(encrypted_token, kdB)\n",
+    "    timestamp_bob = RSA_decrypt(encrypted_timestamp, kdB)\n",
+    "    print(f\"Decrypted timestamp: {timestamp_bob}\")\n",
+    "    \n",
+    "    # Bob gets timestamp difference\n",
+    "    current_timestamp = int(time.time() * 10000)\n",
+    "    print(f\"Bob's current_timestamp: {current_timestamp}\")\n",
+    "    time_diff = abs(current_timestamp - timestamp_bob)\n",
+    "    print(f\"Calculated time difference: {time_diff}\")\n",
+    "    if (token_bob == 1234) and (time_diff < time_window):\n",
     "        print(\"Successful authentication!\")\n",
     "    else:\n",
     "        print(\"Authentication unsuccessful!\")\n",
     "\n",
-    "    # If a replay attack is performed, Eve replays the recovered token to authenticate with Bob's service\n",
+    "    # If a replay attack is performed, Eve replays the recovered token/timestamp to authenticate with Bob's service\n",
     "    if (replayAttack):\n",
-    "        token_replay = RSA_decrypt(token_eve, kdB) # Bob receives ciphertext from Eve\n",
-    "        if (token_replay == 1234):\n",
+    "        time.sleep(0.05)\n",
+    "        encrypted_token, encrypted_timestamp = c_eve\n",
+    "        token_replay = RSA_decrypt(encrypted_token, kdB)\n",
+    "        timestamp_bob = RSA_decrypt(encrypted_timestamp, kdB)\n",
+    "\n",
+    "        # Bob gets timestamp difference\n",
+    "        current_timestamp = int(time.time() * 10000)\n",
+    "        time_diff = abs(current_timestamp - timestamp_bob)\n",
+    "        print(f\"Replay time difference: {time_diff}\")\n",
+    "        if (token_replay == 1234) and (time_diff < time_window):\n",
     "            print(\"Replay attack successful!\")\n",
     "        else:\n",
     "            print(\"Replay attack unsuccessful!\")\n",
     "\n",
-    "p = 61\n",
-    "q = 53 \n",
-    "keB, kdB = RSA_key_generate(p, q)\n",
+    "p = 3490529510847650949147849619903898133417764638493387843990820577\n",
+    "q = 32769132993266709549961988190834461413177642967992942539798288533\n",
+    "keB, kdB = RSA_key_generate(p, q, e=65537)\n",
     "print(\"Performing non-replay experiment on vulnerable cryptosystem...\")\n",
     "VulnerableCryptosystem(keB, kdB, replayAttack=False)\n",
-    "print(\"Performing replay experiment on vulnerable cryptosystem...\")\n",
+    "print(\"\\nPerforming replay experiment on vulnerable cryptosystem...\")\n",
     "VulnerableCryptosystem(keB, kdB, replayAttack=True)\n",
-    "#print(\"Performing non-replay experiment on timestamped cryptosystem...\")\n",
-    "#TimestampedCryptosystem(keB, kdB, replayAttack=False)\n",
-    "#print(\"Performing replay experiment on timestamped cryptosystem...\")\n",
-    "#TimestampedCryptosystem(keB, kdB, replayAttack=True)\n",
-    "print(\"Finished experiments\")"
+    "print(\"\\nPerforming non-replay experiment on timestamped cryptosystem...\")\n",
+    "TimestampedCryptosystem(keB, kdB, replayAttack=False)\n",
+    "print(\"\\nPerforming replay experiment on timestamped cryptosystem...\")\n",
+    "TimestampedCryptosystem(keB, kdB, replayAttack=True)\n",
+    "print(\"\\nFinished experiments\")"
    ]
   }
  ],
@@ -482,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
