--- a/FinalProject/FinalProject.ipynb
+++ b/FinalProject/FinalProject.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Infonet Security Final Project\n",
-    "### Harris Ransom, Serge Kuznetsov (Group ____)\n",
+    "### Harris Ransom, Serge Kuznetsov (Group 4)\n",
     "### 12/15/2024"
    ]
   },
@@ -100,6 +100,12 @@
     "    \n",
     "# TODO: Implement message decoding"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8b64706",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -118,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
